--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -32,4 +32,7 @@
     </div>
   </div>
 </div>
-<shoppers-point-navbar [user]="user"></shoppers-point-navbar>
+<shoppers-point-navbar
+  [user]="user"
+  [wishlist]="wishlist"
+  [products]="products"></shoppers-point-navbar>
