--- a/src/app/cart/summary/summary.component.html
+++ b/src/app/cart/summary/summary.component.html
@@ -1,11 +1,12 @@
 <form class="mb-30" action="">
   <div class="input-group">
     <input
+      disabled
       type="text"
       class="form-control border-0 p-4"
       placeholder="Coupon Code" />
     <div class="input-group-append">
-      <button class="btn btn-primary">Apply Coupon</button>
+      <button disabled class="btn btn-primary">Apply Coupon</button>
     </div>
   </div>
 </form>
@@ -16,19 +17,21 @@
   <div class="border-bottom pb-2">
     <div class="d-flex justify-content-between mb-3">
       <h6>Subtotal</h6>
-      <h6>$150</h6>
+      <h6>{{ total | currency }}</h6>
     </div>
     <div class="d-flex justify-content-between">
       <h6 class="font-weight-medium">Shipping</h6>
-      <h6 class="font-weight-medium">$10</h6>
+      <h6 class="font-weight-medium">{{ shipping | currency }}</h6>
     </div>
   </div>
   <div class="pt-2">
     <div class="d-flex justify-content-between mt-2">
       <h5>Total</h5>
-      <h5>$160</h5>
+      <h5>{{ total + shipping | currency }}</h5>
     </div>
-    <button class="btn btn-block btn-primary font-weight-bold my-3 py-3">
+    <button
+      disabled
+      class="btn btn-block btn-primary font-weight-bold my-3 py-3">
       Proceed To Checkout
     </button>
   </div>
