--- a/src/app/product-details/details/details.component.html
+++ b/src/app/product-details/details/details.component.html
@@ -10,6 +10,6 @@
     </div>
   </div>
   <div class="row px-xl-5">
-    <shoppers-point-reviews></shoppers-point-reviews>
+    <shoppers-point-reviews [product]="product"></shoppers-point-reviews>
   </div>
 </div>
