--- a/src/app/product-details/specifications/specifications.component.html
+++ b/src/app/product-details/specifications/specifications.component.html
@@ -7,9 +7,7 @@
     {{ product.price | currency }}
   </h3>
   <p class="mb-4">
-    Volup erat ipsum diam elitr rebum et dolor. Est nonumy elitr erat diam stet
-    sit clita ea. Sanc ipsum et, labore clita lorem magna duo dolor no sea
-    Nonumy
+    {{ product.description }}
   </p>
   <div class="d-flex align-items-center mb-4 pt-2">
     <div class="input-group quantity mr-3" style="width: 130px">
