--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -48,7 +48,7 @@
               <span
                 class="badge text-secondary border border-secondary rounded-circle"
                 style="padding-bottom: 2px"
-                >0</span
+                >{{ wishlist?.length ?? 0 }}</span
               >
             </a>
             <a
@@ -59,7 +59,7 @@
               <span
                 class="badge text-secondary border border-secondary rounded-circle"
                 style="padding-bottom: 2px"
-                >0</span
+                >{{ products?.length ?? 0 }}</span
               >
             </a>
           </div>
