--- a/src/app/wishlist/wishlist-details/wishlist-details.component.html
+++ b/src/app/wishlist/wishlist-details/wishlist-details.component.html
@@ -12,10 +12,8 @@
         </thead>
         <tbody class="align-middle">
           <ng-container *ngIf="wishlist$ | async as products">
-            <tr
-              *ngFor="let product of products"
-              (click)="onProductSlected(product.id)">
-              <td class="text-start">
+            <tr *ngFor="let product of products">
+              <td class="text-start" (click)="onProductSlected(product.id)">
                 <img
                   [src]="product.image"
                   [alt]="product.title"
