added the necessary changes for contact details page

--- a/src/app/contact/contact-details/contact-details.component.html
+++ b/src/app/contact/contact-details/contact-details.component.html
@@ -1,1 +1,13 @@
-<p>contact-details works!</p>
+<div class="container-fluid">
+  <h2 class="section-title position-relative text-uppercase mx-xl-5 mb-4">
+    <span class="bg-secondary pr-3">Contact Us</span>
+  </h2>
+  <div class="row px-xl-5">
+    <div class="col-lg-7 mb-5">
+      <shoppers-point-contact-form></shoppers-point-contact-form>
+    </div>
+    <div class="col-lg-5 mb-5">
+      <shoppers-point-address></shoppers-point-address>
+    </div>
+  </div>
+</div>
