--- a/src/app/cart/shopping-cart/shopping-cart.component.html
+++ b/src/app/cart/shopping-cart/shopping-cart.component.html
@@ -59,7 +59,8 @@
     </div>
     <div class="col-lg-4">
       <shoppers-point-summary
-        [products]="products$ | async"></shoppers-point-summary>
+        [products]="products$ | async"
+        (checkout)="onCheckout()"></shoppers-point-summary>
     </div>
   </div>
 </div>
