--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -11,8 +11,8 @@
         >
       </a>
     </div>
-    <div class="col-lg-4 col-6 text-left">
-      <form action="">
+    <div class="col-lg-4 col-6 text-left position-relative">
+      <!-- <form action="">
         <div class="input-group">
           <input
             type="text"
@@ -24,7 +24,23 @@
             </span>
           </div>
         </div>
+      </form> -->
+      <form [formGroup]="form">
+        <formly-form
+          [fields]="fields"
+          [form]="form"
+          [model]="model"></formly-form>
       </form>
+      <ul
+        *ngIf="products?.length"
+        class="list-group search-results position-absolute">
+        <li
+          *ngFor="let product of products"
+          class="list-group-item"
+          (click)="onSelectProduct(product.id)">
+          {{ product.title }}
+        </li>
+      </ul>
     </div>
     <div class="col-lg-4 col-6 text-right">
       <p class="m-0">Customer Service</p>
@@ -35,4 +51,4 @@
 <shoppers-point-navbar
   [user]="user"
   [wishlist]="wishlist"
-  [products]="products"></shoppers-point-navbar>
+  [productQuantities]="productQuantities"></shoppers-point-navbar>
