--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -59,7 +59,7 @@
               <span
                 class="badge text-secondary border border-secondary rounded-circle"
                 style="padding-bottom: 2px"
-                >{{ products?.length ?? 0 }}</span
+                >{{ productQuantities?.length ?? 0 }}</span
               >
             </a>
           </div>
