updated the product details module components to display proper cart details in the specifications

--- a/src/app/product-details/details/details.component.html
+++ b/src/app/product-details/details/details.component.html
@@ -6,7 +6,9 @@
 
     <div class="col-lg-7 h-auto mb-30">
       <shoppers-point-specifications
-        [product]="product"></shoppers-point-specifications>
+        [product]="product"
+        [quantity]="(quantity$ | async) ?? 1"
+        (updateCart)="onUpdateCart($event)"></shoppers-point-specifications>
     </div>
   </div>
   <div class="row px-xl-5">
