updated the styles and state files of cart state

--- a/src/app/home/categories/categories.component.html
+++ b/src/app/home/categories/categories.component.html
@@ -14,7 +14,7 @@
             [alt]="category.label" />
         </div>
         <div class="flex-fill pl-3">
-          <h6>{{ category.label | uppercase }}</h6>
+          <h6>{{ category.label.toString() | uppercase }}</h6>
           <small class="text-body">{{ category.quantity }} Products</small>
         </div>
       </div>
