--- a/src/app/checkout/order-summary/order-summary.component.html
+++ b/src/app/checkout/order-summary/order-summary.component.html
@@ -37,41 +37,17 @@
     <span class="bg-secondary pr-3">Payment</span>
   </h5>
   <div class="bg-light p-30">
-    <div class="form-group">
-      <div class="custom-control custom-radio">
-        <input
-          type="radio"
-          class="custom-control-input"
-          name="payment"
-          id="paypal" />
-        <label class="custom-control-label" for="paypal">Paypal</label>
-      </div>
-    </div>
-    <div class="form-group">
-      <div class="custom-control custom-radio">
-        <input
-          type="radio"
-          class="custom-control-input"
-          name="payment"
-          id="directcheck" />
-        <label class="custom-control-label" for="directcheck"
-          >Direct Check</label
-        >
-      </div>
-    </div>
-    <div class="form-group mb-4">
-      <div class="custom-control custom-radio">
-        <input
-          type="radio"
-          class="custom-control-input"
-          name="payment"
-          id="banktransfer" />
-        <label class="custom-control-label" for="banktransfer"
-          >Bank Transfer</label
-        >
-      </div>
-    </div>
-    <button disabled class="btn btn-block btn-primary font-weight-bold py-3">
+    <form [formGroup]="form">
+      <formly-form
+        [fields]="fields"
+        [form]="form"
+        [model]="model"></formly-form>
+    </form>
+
+    <button
+      [disabled]="!formValid"
+      class="btn btn-block btn-primary font-weight-bold py-3"
+      (click)="onPlaceOrder()">
       Place Order
     </button>
   </div>
