updated the component and state to allow product removal from cart

--- a/src/app/cart/products-table/products-table.component.html
+++ b/src/app/cart/products-table/products-table.component.html
@@ -47,7 +47,9 @@
           {{ (product.price ?? 0) * product.quantity | currency }}
         </td>
         <td class="align-middle">
-          <button class="btn btn-sm btn-danger">
+          <button
+            class="btn btn-sm btn-danger"
+            (click)="onProductRemoved(product.id)">
             <i class="fa fa-times"></i>
           </button>
         </td>
