updated the components of AuthModule to display the auth forms

--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -3,17 +3,15 @@
     <div class="col-8 mx-auto">
       <shoppers-point-auth-form
         formClass="bg-white p-30"
-        heading="Sign In"
+        heading="Forgot Password"
         [fields]="fields"
         [form]="form"
         [model]="model">
         <div formFooter class="row">
-          <div class="col-12 bg-white">
-            <span class="ps-3 me-1">Forgot Password?</span>
-            <a
-              [routerLink]="['/auth/forgot-password']"
-              routerLinkActive="active"
-              >Forgot Password</a
+          <div class="col-12 bg-white pb-30">
+            <span class="ps-3 me-1">Already have an account?</span>
+            <a [routerLink]="['/auth/sign-in']" routerLinkActive="active"
+              >Sign In</a
             >
           </div>
           <div class="col-12 bg-white pb-30">
