--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -1,1 +1,21 @@
-<p>sign-up works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col-8 mx-auto">
+      <shoppers-point-auth-form
+        formClass="bg-white p-30"
+        heading="Sign Up"
+        [fields]="fields"
+        [form]="form"
+        [model]="model">
+        <div formFooter class="row">
+          <div class="col-12 bg-white pb-30">
+            <span class="ps-3 me-1">Already have an account?</span>
+            <a [routerLink]="['/auth/sign-in']" routerLinkActive="active"
+              >Sign In</a
+            >
+          </div>
+        </div>
+      </shoppers-point-auth-form>
+    </div>
+  </div>
+</div>
