--- a/src/app/product-details/details/details.component.html
+++ b/src/app/product-details/details/details.component.html
@@ -12,6 +12,10 @@
     </div>
   </div>
   <div class="row px-xl-5">
-    <shoppers-point-reviews [product]="product"></shoppers-point-reviews>
+    <shoppers-point-reviews
+      [product]="product"
+      (submitReview)="
+        onSubmitReview(product.id, $event)
+      "></shoppers-point-reviews>
   </div>
 </div>
