--- a/src/app/product-details/reviews/reviews.component.html
+++ b/src/app/product-details/reviews/reviews.component.html
@@ -1,139 +1,101 @@
 <div class="col">
   <div class="bg-light p-30">
-    <div class="nav nav-tabs mb-4">
-      <a class="nav-item nav-link text-dark active" data-toggle="tab"
-        >Description</a
-      >
-      <a class="nav-item nav-link text-dark" data-toggle="tab">Information</a>
-      <a class="nav-item nav-link text-dark" data-toggle="tab"
-        >Reviews ({{ product?.rating?.count ?? 0 }} )</a
-      >
-    </div>
-    <div class="tab-content">
-      <div class="tab-pane fade show active" id="tab-pane-1">
-        <h4 class="mb-3">Product Description</h4>
-        <p [innerHTML]="product?.description"></p>
-      </div>
-      <div class="tab-pane fade" id="tab-pane-2">
-        <h4 class="mb-3">Additional Information</h4>
-        <p>
-          Eos no lorem eirmod diam diam, eos elitr et gubergren diam sea.
-          Consetetur vero aliquyam invidunt duo dolores et duo sit. Vero diam ea
-          vero et dolore rebum, dolor rebum eirmod consetetur invidunt sed sed
-          et, lorem duo et eos elitr, sadipscing kasd ipsum rebum diam. Dolore
-          diam stet rebum sed tempor kasd eirmod. Takimata kasd ipsum accusam
-          sadipscing, eos dolores sit no ut diam consetetur duo justo est, sit
-          sanctus diam tempor aliquyam eirmod nonumy rebum dolor accusam, ipsum
-          kasd eos consetetur at sit rebum, diam kasd invidunt tempor lorem,
-          ipsum lorem elitr sanctus eirmod takimata dolor ea invidunt.
-        </p>
-        <div class="row">
-          <div class="col-md-6">
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item px-0">
-                Sit erat duo lorem duo ea consetetur, et eirmod takimata.
-              </li>
-              <li class="list-group-item px-0">
-                Amet kasd gubergren sit sanctus et lorem eos sadipscing at.
-              </li>
-              <li class="list-group-item px-0">
-                Duo amet accusam eirmod nonumy stet et et stet eirmod.
-              </li>
-              <li class="list-group-item px-0">
-                Takimata ea clita labore amet ipsum erat justo voluptua. Nonumy.
-              </li>
-            </ul>
+    <ul
+      ngbNav
+      #nav="ngbNav"
+      [(activeId)]="activeId"
+      [destroyOnHide]="false"
+      class="nav-tabs">
+      <li [ngbNavItem]="1" [destroyOnHide]="true">
+        <button ngbNavLink>Description</button>
+        <ng-template ngbNavContent>
+          <h4 class="mb-3">Product Description</h4>
+          <p [innerHTML]="product?.description"></p>
+        </ng-template>
+      </li>
+      <li [ngbNavItem]="2">
+        <button ngbNavLink>Information</button>
+        <ng-template ngbNavContent>
+          <h4 class="mb-3">Product Information</h4>
+          <div class="row">
+            <div class="col-md-6">
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item px-0">Title</li>
+                <li class="list-group-item px-0">Category</li>
+                <li class="list-group-item px-0">Price</li>
+              </ul>
+            </div>
+            <div class="col-md-6">
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item px-0">
+                  {{ product?.title }}
+                </li>
+                <li class="list-group-item px-0">
+                  {{ product?.category | titlecase }}
+                </li>
+                <li class="list-group-item px-0">
+                  {{ product?.price | currency }}
+                </li>
+              </ul>
+            </div>
           </div>
-          <div class="col-md-6">
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item px-0">
-                Sit erat duo lorem duo ea consetetur, et eirmod takimata.
-              </li>
-              <li class="list-group-item px-0">
-                Amet kasd gubergren sit sanctus et lorem eos sadipscing at.
-              </li>
-              <li class="list-group-item px-0">
-                Duo amet accusam eirmod nonumy stet et et stet eirmod.
-              </li>
-              <li class="list-group-item px-0">
-                Takimata ea clita labore amet ipsum erat justo voluptua. Nonumy.
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="tab-pane fade" id="tab-pane-3">
-        <div class="row">
-          <div class="col-md-6">
-            <h4 class="mb-4">1 review for "Product Name"</h4>
-            <div class="media mb-4">
-              <img
-                src="img/user.jpg"
-                alt="Image"
-                class="img-fluid mr-3 mt-1"
-                style="width: 45px" />
-              <div class="media-body">
-                <h6>
-                  John Doe<small> - <i>01 Jan 2045</i></small>
-                </h6>
-                <div class="text-primary mb-2">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star-half-alt"></i>
-                  <i class="far fa-star"></i>
+        </ng-template>
+      </li>
+      <li [ngbNavItem]="3">
+        <button ngbNavLink>Reviews ({{ product?.rating?.count ?? 0 }} )</button>
+        <ng-template ngbNavContent let-active>
+          <div class="row">
+            <div class="col-md-6">
+              <h4 class="mb-3">Product Reviews</h4>
+              <div
+                *ngFor="let review of product?.reviews ?? []"
+                class="media mb-4">
+                <i class="fas fa-user fa-3x mr-3 mt-1"></i>
+                <div class="media-body">
+                  <h6>
+                    {{ review.name | titlecase }}
+                  </h6>
+                  <shoppers-point-rating
+                    [rating]="review.rating"
+                    [hideRating]="true"></shoppers-point-rating>
+
+                  <p [innerHTML]="review.message"></p>
                 </div>
-                <p>
-                  Diam amet duo labore stet elitr ea clita ipsum, tempor labore
-                  accusam ipsum et no at. Kasd diam tempor rebum magna dolores
-                  sed sed eirmod ipsum.
-                </p>
+              </div>
+              <div *ngIf="!product?.reviews?.length" class="media mb-4">
+                <div class="media-body">
+                  <p>No Reviews Found</p>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="col-md-6">
-            <h4 class="mb-4">Leave a review</h4>
-            <small
-              >Your email address will not be published. Required fields are
-              marked *</small
-            >
-            <div class="d-flex my-3">
-              <p class="mb-0 mr-2">Your Rating * :</p>
-              <div class="text-primary">
-                <i class="far fa-star"></i>
-                <i class="far fa-star"></i>
-                <i class="far fa-star"></i>
-                <i class="far fa-star"></i>
-                <i class="far fa-star"></i>
+            <div class="col-md-6">
+              <h4 class="mb-3">Leave a review</h4>
+              <small
+                >Your email address will not be published. Required fields are
+                marked *</small
+              >
+              <div class="d-flex my-3">
+                <label class="form-label mr-2"
+                  >Your Rating <span aria-hidden="true">*</span></label
+                >
+                <shoppers-point-rating
+                  [rating]="model.rating"
+                  [hideRating]="true"
+                  (ratingChange)="
+                    onRatingChanged($event)
+                  "></shoppers-point-rating>
               </div>
+              <form [formGroup]="form">
+                <formly-form
+                  [fields]="fields"
+                  [form]="form"
+                  [model]="model"></formly-form>
+              </form>
             </div>
-            <form>
-              <div class="form-group">
-                <label for="message">Your Review *</label>
-                <textarea
-                  id="message"
-                  cols="30"
-                  rows="5"
-                  class="form-control"></textarea>
-              </div>
-              <div class="form-group">
-                <label for="name">Your Name *</label>
-                <input type="text" class="form-control" id="name" />
-              </div>
-              <div class="form-group">
-                <label for="email">Your Email *</label>
-                <input type="email" class="form-control" id="email" />
-              </div>
-              <div class="form-group mb-0">
-                <input
-                  type="submit"
-                  value="Leave Your Review"
-                  class="btn btn-primary px-3" />
-              </div>
-            </form>
           </div>
-        </div>
-      </div>
-    </div>
+        </ng-template>
+      </li>
+    </ul>
+    <div [ngbNavOutlet]="nav" class="mt-2"></div>
   </div>
 </div>
