--- a/src/app/product-details/specifications/specifications.component.html
+++ b/src/app/product-details/specifications/specifications.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="product" class="h-100 bg-light p-30">
   <h3>{{ product.title }}</h3>
   <div class="d-flex mb-3">
-    <shoppers-point-rating [product]="product"></shoppers-point-rating>
+    <shoppers-point-rating [rating]="product.rating"></shoppers-point-rating>
   </div>
   <h3 class="font-weight-semi-bold mb-4">
     {{ product.price | currency }}
