--- a/src/app/catalogue/product-card/product-card.component.html
+++ b/src/app/catalogue/product-card/product-card.component.html
@@ -32,7 +32,7 @@
       <h5>{{ product.price | currency }}</h5>
     </div>
     <div class="d-flex align-items-center justify-content-center mb-1">
-      <shoppers-point-rating [product]="product"></shoppers-point-rating>
+      <shoppers-point-rating [rating]="product.rating"></shoppers-point-rating>
     </div>
   </div>
 </div>
