updated the templates for AuthModule and updated the TypeButtonComponent to allow disabling the button

--- a/src/app/shared/formly-types/type-button/type-button.component.html
+++ b/src/app/shared/formly-types/type-button/type-button.component.html
@@ -1,5 +1,6 @@
 <button
   class="btn"
+  [disabled]="!!props['disabled']"
   [type]="props['btnType']"
   [ngClass]="props['btnClass']"
   (click)="onClick($event)">
