--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,11 @@
   [productQuantities]="productQuantities$ | async"
   [products]="products$ | async"
   (search)="onSearch($event)"
-  (selectProduct)="onSelectProduct($event)"></shoppers-point-header>
+  (selectProduct)="onSelectProduct($event)"
+  (signOut)="onSignOut()"></shoppers-point-header>
 
 <router-outlet></router-outlet>
 
-<shoppers-point-footer [user]="user$ | async"></shoppers-point-footer>
+<shoppers-point-footer
+  [user]="user$ | async"
+  (signout)="onSignOut()"></shoppers-point-footer>
