--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -43,16 +43,14 @@
           </div>
         </div>
         <div *ngIf="user" class="col-md-4 mb-5">
-          <h5 class="text-secondary text-uppercase mb-4">My Account</h5>
+          <h5
+            class="text-secondary text-uppercase mb-4"
+            [title]="user.displayName || user.email">
+            My Account
+          </h5>
           <div class="d-flex flex-column justify-content-start">
-            <a
-              class="text-secondary mb-2"
-              routerLinkActive="active"
-              [routerLink]="['/user/my-account']"
-              ><i class="fa fa-angle-right mr-2"></i>My Account</a
-            >
-            <a class="text-secondary mb-2" (click)="onLogOut()"
-              ><i class="fa fa-angle-right mr-2"></i>Log Out</a
+            <a class="text-secondary mb-2" (click)="onSignOut()"
+              ><i class="fa fa-angle-right mr-2"></i>Sign Out</a
             >
           </div>
         </div>
