--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,5 +1,7 @@
 <div class="container-fluid">
-  <shoppers-point-topbar [user]="user"></shoppers-point-topbar>
+  <shoppers-point-topbar
+    [user]="user"
+    (signOut)="onSignOut()"></shoppers-point-topbar>
   <div class="row align-items-center bg-light py-3 px-xl-5 d-none d-lg-flex">
     <div class="col-lg-4">
       <a href="" class="text-decoration-none">
@@ -12,19 +14,6 @@
       </a>
     </div>
     <div class="col-lg-4 col-6 text-left position-relative">
-      <!-- <form action="">
-        <div class="input-group">
-          <input
-            type="text"
-            class="form-control"
-            placeholder="Search for products" />
-          <div class="input-group-append">
-            <span class="input-group-text bg-transparent text-primary">
-              <i class="fa fa-search"></i>
-            </span>
-          </div>
-        </div>
-      </form> -->
       <form [formGroup]="form">
         <formly-form
           [fields]="fields"
