--- a/src/app/shared/pagination/pagination.component.html
+++ b/src/app/shared/pagination/pagination.component.html
@@ -1,11 +1,11 @@
-<nav *ngIf="products?.length">
+<nav>
   <ul class="pagination justify-content-center">
     <li
       class="page-item"
       [ngClass]="{
         disabled: currentPage === 1
       }">
-      <a class="page-link" (click)="onPageChange(currentPage - 1)">Previous</a>
+      <a class="page-link" (click)="onPageChanged(currentPage - 1)">Previous</a>
     </li>
     <li
       *ngFor="let page of pages"
@@ -13,14 +13,14 @@
       [ngClass]="{
         active: page === currentPage
       }">
-      <a class="page-link" (click)="onPageChange(page)">{{ page }}</a>
+      <a class="page-link" (click)="onPageChanged(page)">{{ page }}</a>
     </li>
     <li
       class="page-item"
       [ngClass]="{
         disabled: currentPage === pages[pages.length - 1]
       }">
-      <a class="page-link" (click)="onPageChange(currentPage + 1)">Next</a>
+      <a class="page-link" (click)="onPageChanged(currentPage + 1)">Next</a>
     </li>
   </ul>
 </nav>
