updated the code to handle stop actions with alerts if error exists

--- a/src/app/catalogue/shop/shop.component.html
+++ b/src/app/catalogue/shop/shop.component.html
@@ -42,6 +42,7 @@
         'shoppers-point-spinner': (productsLoading$ | async)
       }">
       <shoppers-point-products
+        *ngIf="!(productsLoading$ | async)"
         [productsPerPageOptions]="(productsPerPageOptions$ | async) ?? []"
         [products]="(products$ | async) ?? []"
         [pages]="(pages$ | async) ?? []"
