--- a/src/app/cart/products-table/products-table.component.html
+++ b/src/app/cart/products-table/products-table.component.html
@@ -25,7 +25,7 @@
               <button
                 class="btn btn-sm btn-primary btn-minus"
                 [disabled]="product.quantity <= 1"
-                (click)="onRemove(i)">
+                (click)="onReduce(i)">
                 <i class="fa fa-minus"></i>
               </button>
             </div>
@@ -47,9 +47,7 @@
           {{ (product.price ?? 0) * product.quantity | currency }}
         </td>
         <td class="align-middle">
-          <button
-            class="btn btn-sm btn-danger"
-            (click)="onProductRemoved(product.id)">
+          <button class="btn btn-sm btn-danger" (click)="onRemove(product.id)">
             <i class="fa fa-times"></i>
           </button>
         </td>
