chore(project) - package.json, angular.json, address.component.html, footer.component.html - Upgraded the project from angular v16 to angular v17

--- a/src/app/contact/address/address.component.html
+++ b/src/app/contact/address/address.component.html
@@ -10,11 +10,11 @@
 </div>
 <div class="bg-light p-30 mb-3">
   <p class="mb-2">
-    <i class="fa fa-map-marker-alt text-primary mr-3"></i>123 Street, New
-    YorkKarnataka, INDIA
+    <i class="fa fa-map-marker-alt text-primary mr-3"></i>123 Street, New York,
+    Karnataka, INDIA
   </p>
   <p class="mb-2">
-    <i class="fa fa-envelope text-primary mr-3"></i>info@shoppers-point.com
+    <i class="fa fa-envelope text-primary mr-3"></i>info&#64;shoppers-point.com
   </p>
   <p class="mb-2">
     <i class="fa fa-phone-alt text-primary mr-3"></i>+91 98765 43210
