--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -11,7 +11,8 @@
         Karnataka, INDIA
       </p>
       <p class="mb-2">
-        <i class="fa fa-envelope text-primary mr-3"></i>info@shoppers-point.com
+        <i class="fa fa-envelope text-primary mr-3"></i
+        >info&#64;shoppers-point.com
       </p>
       <p class="mb-0">
         <i class="fa fa-phone-alt text-primary mr-3"></i>+91 98765 43210
