--- a/src/app/product-details/carousel/carousel.component.html
+++ b/src/app/product-details/carousel/carousel.component.html
@@ -6,9 +6,12 @@
   <div class="carousel-inner bg-light">
     <div
       *ngFor="let index of indices"
-      class="carousel-item"
+      class="carousel-item text-center"
       [ngClass]="{ active: index === activeIndex }">
-      <img class="w-100 h-100" [src]="product.image" [alt]="product.title" />
+      <img
+        class="h-100 product-img"
+        [src]="product.image"
+        [alt]="product.title" />
     </div>
   </div>
   <a class="carousel-control-prev" data-slide="prev" (click)="onPrev()">
