--- a/src/app/catalogue/products/products.component.html
+++ b/src/app/catalogue/products/products.component.html
@@ -3,23 +3,9 @@
     <div class="d-flex align-items-center justify-content-end mb-4">
       <div class="ml-2">
         <div class="btn-group ml-2">
-          <button
-            type="button"
-            class="btn btn-sm btn-light dropdown-toggle"
-            data-toggle="dropdown"
-            (click)="onDropdownToggle()">
-            Showing: {{ productsPerPage }}
+          <button type="button" class="btn btn-sm btn-light" disabled>
+            Showing: {{ products ? products.length : 0 }} Products
           </button>
-          <div
-            class="dropdown-menu dropdown-menu-right"
-            [ngClass]="{ 'd-block': expanded }">
-            <a
-              *ngFor="let productsPerPageOption of productsPerPageOptions"
-              class="dropdown-item"
-              (click)="onProductsPerPageChanged(productsPerPageOption)"
-              >{{ productsPerPageOption }}</a
-            >
-          </div>
         </div>
       </div>
     </div>
